@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2004, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -20,22 +20,32 @@
  * or visit www.oracle.com if you need additional information or have any
  * questions.
  */
-
-
 /*
  * @test
- * @key stress randomness
- *
- * @summary converted from VM Testbase gc/ArrayJuggle/Juggle04.
- * VM Testbase keywords: [gc, stress, stressopt, nonconcurrent]
- *
- * @library /vmTestbase
- *          /test/lib
- * @run main/othervm
- *      -XX:+HeapDumpOnOutOfMemoryError
- *      -Xlog:gc=debug:gc.log
- *      gc.ArrayJuggle.Juggle01.Juggle01
- *      -gp booleanArr
- *      -ms low
- */
+ * @bug 4633887
+ * @summary setting a null Image in setIconImage should not cause exception.
+ * @key headful
+ * @run main NullIconImageTest
+*/
 
+import java.awt.EventQueue;
+import java.awt.Frame;
+
+public class NullIconImageTest {
+    static Frame f;
+
+    public static void main(String[] args) throws Exception {
+        EventQueue.invokeAndWait(() -> {
+            try {
+                f = new Frame();
+                f.setVisible(true);
+                f.setIconImage(null); // This call should not cause an exception.
+            } finally {
+                if (f != null) {
+                    f.dispose();
+                }
+            }
+        });
+    }
+
+ }// class NullIconImageTest
